# DirkTensor

./: .gitattributes  .gitignore  .lldbinit  CMakeLists.txt  CrossEntropyLoss.cpp  CrossEntropyLoss.h  DEBUGGER_SETUP.md  Detokenizer.cpp  Detokenizer.h  FlashAttention.cpp  FlashAttention.h  OlmoAttention.cpp  OlmoAttention.h  OlmoAttention_batch.cpp  OlmoAttention_optimized.cpp  OlmoAttention_original.cpp  OlmoAttention_tiled.cpp  OlmoBlock.cpp  OlmoBlock.h  OlmoLmHead.cpp  OlmoLmHead.h  OlmoMlp.cpp  OlmoMlp.h  OlmoModel.cpp  OlmoModel.h  PERFORMANCE.md  README.md  RMSNorm.cpp  RMSNorm.h  arithmetic_intensity_bench.cpp  backward.py  benchmark.py  cached_path.cpp  cached_path.h  convert_checkpoint_from_huggingface.py  export_vocab.py  inference.py  main.cpp  model_config.h  optimization_log.md  (+9 more)
.claude/: settings.local.json
.github/workflows/: ci.yml
data/: archilles.txt  dodonaea.txt
models/OLMo-2-0425-1B/: lm_head.weight.npy  model.embed_tokens.weight.npy  model.layers.0.mlp.down_proj.weight.npy  model.layers.0.mlp.gate_proj.weight.npy  model.layers.0.mlp.up_proj.weight.npy  model.layers.0.post_attention_layernorm.weight.npy  model.layers.0.post_feedforward_layernorm.weight.npy  model.layers.0.self_attn.k_norm.weight.npy  model.layers.0.self_attn.k_proj.weight.npy  model.layers.0.self_attn.o_proj.weight.npy  model.layers.0.self_attn.q_norm.weight.npy  model.layers.0.self_attn.q_proj.weight.npy  model.layers.0.self_attn.v_proj.weight.npy  model.layers.1.mlp.down_proj.weight.npy  model.layers.1.mlp.gate_proj.weight.npy  model.layers.1.mlp.up_proj.weight.npy  model.layers.1.post_attention_layernorm.weight.npy  model.layers.1.post_feedforward_layernorm.weight.npy  model.layers.1.self_attn.k_norm.weight.npy  model.layers.1.self_attn.k_proj.weight.npy  model.layers.1.self_attn.o_proj.weight.npy  model.layers.1.self_attn.q_norm.weight.npy  model.layers.1.self_attn.q_proj.weight.npy  model.layers.1.self_attn.v_proj.weight.npy  model.layers.10.mlp.down_proj.weight.npy  model.layers.10.mlp.gate_proj.weight.npy  model.layers.10.mlp.up_proj.weight.npy  model.layers.10.post_attention_layernorm.weight.npy  model.layers.10.post_feedforward_layernorm.weight.npy  model.layers.10.self_attn.k_norm.weight.npy  model.layers.10.self_attn.k_proj.weight.npy  model.layers.10.self_attn.o_proj.weight.npy  model.layers.10.self_attn.q_norm.weight.npy  model.layers.10.self_attn.q_proj.weight.npy  model.layers.10.self_attn.v_proj.weight.npy  model.layers.11.mlp.down_proj.weight.npy  model.layers.11.mlp.gate_proj.weight.npy  model.layers.11.mlp.up_proj.weight.npy  model.layers.11.post_attention_layernorm.weight.npy  model.layers.11.post_feedforward_layernorm.weight.npy  (+140 more)
tests/: requirements-test.txt  test_backward.py  test_convert_checkpoint.py  test_tokenize_text.py
